# ARIADNE

./: README.md  pyproject.toml
Data/Pu-239/: n-094-Pu-239_nfcsCor_ENDFBVIII1.txt  n-094-Pu-239_nfcsRelUnc_ENDFBVIII1.txt
Data/U-235/: n-092-U-235_nfcsCor_ENDFBVIII1.txt  n-092-U-235_nfcsRelUnc_ENDFBVIII1.txt  n-092-U-235_nfcs_ENDFBVIII1.txt
Data/U-238/: n-092-U-238_nfcs_ENDFBVIII0.txt
Examples/B-10/nacs_Amaducci2019/: Amaducci2019_20binsperdecade.txt  B-10nacs_Amaducci2019.ipynb  DS6007.CRD  RatioCor.datloadtxt  TotalCor.datloadtxt  nacs_Amaducci2019.xml  nacs_Amaducci2019EUCLID.json  nacs_Amaducci2019ratiodataEUCLID.json
Examples/Cf-252/PFNS_EvaluationFinalStandardEvaluationForPreservation/: DataBase_ForEvaluation_Chalupka1outlyingdata_Maerten60degonlyLA-UR-25-29295_inputforSTANDARD.json  Eval_MvUncCf-2520,fnubar-promptGLS__Maerten60degonlyChalupka1datapointsrejectLA-UR-25-29295_finalacceptedSTANDARD.txt  Evaluate.ipynb
Examples/Cf-252/PFNS_EvaluationImpactAssessment/: DataBase_ForImpactAssessment_AfterAIMLknowledge_Upd20250908.json  DataBase_ForImpactAssessment_AfterAIMLknowledge_Upd20250908_noKornilov.json  DataBase_ForImpactAssessment_BeforeAIMLknowledge.json  EvaluateImpactAssessment.ipynb  (+1 more)
Examples/LoadReferenceData/: LoadNewData.ipynb
src/: BasicPhysicsFunctions.py  Class_nfcs.py  Class_nfcs_legacy.py  Class_ngammacs.py  Class_nubar.py  CorMatrixShapes.py  EvaluateGLSPFNS.py  ExperimentalModelling.py  Manage_ReferenceData.py  MathsPhysicsConstants.py  MatrixFunctions.py  ToFCovariance.py  WriteGMAOutput.py  WriteOutput.py
(+89 files in other folders)
