[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ARIADNE"
version = "1.0.0"
description = "The code ARIADNE performs uncertainty quantification of experimental data for nuclear data. It also performs nuclear data evaluations with the algorithm generalized squares."
authors = [
  { name = "Denise Neudecker", email = "298855748+dneudecker-LANL@users.noreply.github.com" },
  { name = "N.A.W.~Walton" },
  { name = "A.~Khatiwada" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13.1",
  "jupyter",
  "lxml>=5.2",
  "matplotlib>=3.8"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ariadne = ["Data/**"]

#[project.scripts]
#ariadne-create_reference_library = "ariadne.config:create_reference_library"
